<resources>
    <string name="app_name" translatable="false">Nextcloud Deck</string>
    <string name="app_name_short" translatable="false">Deck</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hint_search_deck">Search deck</string>
    <string name="simple_add">Add</string>
    <string name="simple_save">Save</string>
    <string name="simple_more">More</string>
    <string name="simple_title">Title</string>
    <string name="simple_copy">Copy</string>
    <string name="simple_synchronization">Synchronization</string>
    <string name="simple_appearance">Appearance</string>
    <string name="simple_error">Error</string>
    <string name="simple_exception">Exception</string>
    <string name="simple_close">Close</string>
    <string name="simple_filter">Filter</string>
    <string name="simple_reset">Reset</string>
    <string name="simple_discard">Discard</string>
    <string name="simple_update">Update</string>
    <string name="simple_delete">Delete</string>
    <string name="simple_rename">Rename</string>
    <string name="simple_settings">Settings</string>
    <string name="simple_undo">Undo</string>
    <string name="simple_manage">manage</string>
    <string name="simple_share">share</string>
    <string name="simple_select">Select</string>
    <string name="simple_comment">Comment</string>
    <string name="simple_disabled">disabled</string>
    <string name="simple_archive">Archive</string>
    <string name="simple_unassigned">Unassigned</string>
    <string name="hint_error_appeared">An error appeared</string>
    <string name="edit_board">Edit board</string>
    <string name="archive_board">Archive board</string>
    <string name="delete_board">Delete board</string>
    <string name="delete_something">Delete %1$s</string>
    <string name="about">About</string>
    <string name="about_version_title">Version</string>
    <string name="about_version">You are currently using %1$s</string>
    <string name="about_maintainer_title">Maintainer</string>
    <string name="about_maintainer" translatable="false">Niedermann IT-Dienstleistungen</string>
    <string name="about_developers_title">Developers</string>
    <string name="about_developers" translatable="false">Stefan Niedermann, Artur Dawtjan</string>
    <string name="about_translators_title">Translators</string>
    <string name="about_translators_transifex">Nextcloud community on %1$s</string>
    <string name="about_translators_transifex_label">Transifex</string>
    <string name="about_source_title">Source code</string>
    <string name="about_source">This project is hosted on GitHub: %1$s</string>
    <string name="about_issues_title">Issues</string>
    <string name="about_issues">You can report bugs, enhancement proposals and feature requests at the GitHub issue tracker: %1$s</string>
    <string name="about_translate_title">Translate</string>
    <string name="about_translate">Join the Nextcloud team on Transifex and help us to translate this app: %1$s</string>
    <string name="about_app_license_title">App license</string>
    <string name="about_app_license">This application is licensed under the GNU GENERAL PUBLIC LICENSE v3+.</string>
    <string name="about_app_license_button">View license</string>
    <string name="about_app_icon_author_link_label" translatable="false">GitHub</string>
    <string name="about_icons_disclaimer_title">Icons</string>
    <string name="about_icons_disclaimer_app_icon">For the original icon see %1$s.</string>
    <string name="about_icons_disclaimer_mdi_icons">All further icons used by this app are %1$s made by Google Inc. and licensed under the Apache 2.0 License.</string>
    <string name="about_icons_disclaimer_mdi">Material Design Icons</string>
    <string name="about_credits_tab_title">Credits</string>
    <string name="about_contribution_tab_title">Contribution</string>
    <string name="about_license_tab_title">License</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="edit">Edit</string>
    <string name="label_labels">Select Tags</string>
    <string name="label_description">Description</string>
    <string name="hint_assign_people">Assign users</string>
    <string name="hint_due_date_date">Due date</string>
    <string name="hint_due_date_time">Time</string>
    <string name="hint_start_date_date">Start date</string>
    <string name="hint_start_date_time">Time</string>
    <string name="card_not_found">Card not found</string>
    <string name="card_not_found_message">The card could not be found. Maybe it has been deleted recently.</string>
    <string name="add_account">Add account</string>
    <string name="choose_account">Choose account</string>
    <string name="add_card">Add card</string>
    <string name="activity">Activity</string>
    <string name="add_list">Add list</string>
    <string name="rename_list">Rename list</string>
    <string name="delete_list">Delete list</string>
    <string name="counter_max_value" translatable="false">+99</string>
    <string name="label_menu">menu</string>
    <string name="action_card_assign">Assign card to me</string>
    <string name="action_card_unassign">Unassign card from me</string>
    <string name="action_card_archive">Archive card</string>
    <string name="action_card_delete">Delete card</string>
    <string name="add_board">Add board</string>
    <string name="label_clear_due_date">Clear due date</string>
    <string name="label_clear_start_date">Clear start date</string>
    <string name="label_clear_done">Not done</string>
    <string name="label_due_at">Due at: %1$s</string>
    <string name="label_start_at">Start at: %1$s</string>
    <string name="label_add">Add %1$s</string>
    <string name="url_maintainer" translatable="false">https://www.niedermann.it/</string>
    <string name="url_about_icon_author" translatable="false">https://github.com/nextcloud/deck/commit/8c04ea8dc99e9b392f4039e8e5e6964d5a6d3453#diff-f3716cc279904617b1a21078526b6bf1R1</string>
    <string name="url_source" translatable="false">https://github.com/stefan-niedermann/nextcloud-deck</string>
    <string name="url_issues" translatable="false">https://github.com/stefan-niedermann/nextcloud-deck/issues/new/choose</string>
    <string name="url_report_bug" translatable="false">https://github.com/stefan-niedermann/nextcloud-deck/issues/new?labels=bug&amp;template=bug_report.md</string>
    <string name="url_license" translatable="false">https://github.com/stefan-niedermann/nextcloud-deck/blob/master/LICENSE</string>
    <string name="url_translations" translatable="false">https://app.transifex.com/nextcloud/nextcloud/</string>
    <string name="url_about_icons_disclaimer_mdi" translatable="false">https://materialdesignicons.com/</string>
    <string name="url_fragment_update_deck" translatable="false">/index.php/settings/apps/installed/deck</string>
    <string name="url_fragment_install_deck" translatable="false">/index.php/settings/apps/organization/deck</string>
    <string name="url_fragment_server_logs" translatable="false">/index.php/settings/admin/logging</string>
    <string name="url_fragment_share_card_pre_1_0_0" translatable="false">/index.php/apps/deck/#!/board/%1$d/card/%2$d</string>
    <string name="url_fragment_share_card_since_1_0_0" translatable="false">/index.php/apps/deck/#/board/%1$d/card/%2$d</string>
    <string name="url_fragment_share_card_since_1_12_0" translatable="false">/index.php/apps/deck/board/%1$d/card/%2$d</string>
    <string name="url_fragment_share_board_pre_1_0_0" translatable="false">/index.php/apps/deck/#!/board/%1$d</string>
    <string name="url_fragment_share_board_since_1_0_0" translatable="false">/index.php/apps/deck/#/board/%1$d</string>
    <string name="url_fragment_share_board_since_1_12_0" translatable="false">/index.php/apps/deck/board/%1$d</string>
    <string name="url_faq_push_notifications" translatable="false">https://github.com/stefan-niedermann/nextcloud-deck/blob/master/FAQ.md#how-to-receive-notifications-when-a-due-date-is-reached</string>
    <string name="card_edit_details">Details</string>
    <string name="card_edit_attachments">Attachments</string>
    <string name="card_edit_activity">Activity</string>
    <string name="about_server_app_version_text">Server app version:</string>
    <string name="no_files_attached_to_this_card">There are no files attached to this card.</string>
    <string name="attachments">Attachments</string>
    <string name="append_to_description">Append to description</string>
    <string name="no_cards">No cards yet</string>
    <string name="account_already_added">The account %1$s has already been added</string>
    <string name="not_synced_yet">Not synced yet</string>
    <string name="no_lists_yet">No lists yet</string>
    <string name="do_you_want_to_save_your_changes">Do you want to save your changes?</string>
    <string name="do_you_want_to_archive_all_cards_of_the_list">Do you want to archive all cards of %1$s?</string>
    <string name="do_you_want_to_archive_all_cards_of_the_filtered_list">Do you want to archive all filtered cards of %1$s?</string>
    <plurals name="do_you_want_to_delete_the_current_list">
        <item quantity="one">This will permanently delete %1$d card of this list.</item>
        <item quantity="other">This will permanently delete all %1$d cards of this list.</item>
    </plurals>
    <plurals name="do_you_want_to_delete_the_label">
        <item quantity="one">This will remove the label from %1$d card.</item>
        <item quantity="other">This will remove the label from %1$d cards.</item>
    </plurals>
    <string name="add_a_new_list_using_the_button">Add a new list using the + button</string>
    <string name="add_a_new_card_using_the_button">Add a new card using the + button</string>
    <string name="deck_outdated_please_update">Your Deck web app version is too old (%1$s). Please update to use this Android app as client.</string>
    <string name="delete_board_message">This will permanently delete this board including all lists and cards.</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_compact_title">Compact mode</string>
    <string name="settings_cover_images_title">Cover images</string>
    <string name="settings_debugging">Debug logs</string>
    <string name="settings_etags">Use ETags</string>
    <string name="settings_etags_summary">Speeds up synchronization</string>
    <string name="settings_background_sync">Background synchronization</string>
    <string name="settings_push_notifications">Push notifications</string>
    <string name="settings_compress_image_attachments">Compress images on upload</string>
    <string name="search_in">Search in %1$s</string>
    <string name="settings_compress_image_attachments_summary">Faster upload, less quality</string>
    <string name="pref_value_wifi_and_mobile">Sync on Wi-Fi and mobile data</string>
    <string name="pref_value_wifi_only">Sync only on Wi-Fi</string>
    <string-array name="darkmode_entries">
        <item>System Default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="unassigned_user">Unassigned %1$s</string>
    <string name="no_activities">There are no activities on this card. You need to be connected to the internet to load and display activities.</string>
    <string name="share_board">Share board</string>
    <string name="you_are_currently_offline">You are currently offline</string>
    <string name="welcome_text">Welcome to %1$s</string>
    <string name="projects_title">Projects</string>
    <string name="upload_a_new_attachment">Upload a new attachment</string>
    <string name="edit_description">Edit description</string>
</resources>