<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.card.EditActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/attachments_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:listitem="@layout/item_attachment_default"
        tools:visibility="visible" />

    <it.niedermann.nextcloud.deck.ui.view.EmptyContentView
        android:id="@+id/empty_content_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:description="@string/no_files_attached_to_this_card"
        app:image="@drawable/ic_attach_file_24dp"
        app:title="@string/attachments" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/upload_a_new_attachment"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_file_upload_24dp"
        tools:visibility="visible" />

    <FrameLayout
        android:id="@+id/pickerBackdrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/bottom_sheet_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:elevation="@dimen/spacer_1x"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/dragHandle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/attachment_picker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/spacer_2x"
            android:paddingBottom="@dimen/spacer_4x"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/item_attachment_picker_type" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>